    * Browser based language detection.
    * Made it possible to specify a node's language.
    * Language dependent path aliases.
- Moved "PHP input filter" to a stand-alone module so it can be deleted for security reasons.
- Usability:
    * Improved handling of teasers in posts.
    * Added sticky table headers.
    * Check for clean URL support automatically with JavaScript.
- Theme system:
    * Added .info files to themes and made it easier to specify regions and features.
    * Added theme registry: modules can directly provide .tpl.php files for their themes without having to create theme_ functions.
    * Used the Garland theme for the installation and maintenance pages.
- Refactored update.php to a generic batch API to be able to run time consuming operations in multiple subsequent HTTP requests

Drupal 5.0, 2007-01-15
----------------------
- Completely retooled the administration page
    * /Admin now contains an administration page which may be themed
    * Reorganised administration menu items by task and by module
    * Added a status report page with detailed PHP/MySQL/Drupal information
- Added web-based installer which can:
    * Check installation and run-time requirements
    * Automatically generate the database configuration file
    * Install pre-made 'install profiles' or distributions
    * Import the database structure with automatic table prefixing
    * Be localized
- Added new default Garland theme
- Added color module to change some themes' color schemes
- Included the jQuery JavaScript library 1.0.4 and converted all core JavaScript to use it
- Introduced the ability to alter mail sent from system
- Module system:
    * Added .info files for module meta-data
    * Added support for module dependencies
    * Improved module installation screen
    * Moved core modules to their own directories
    * Added support for module uninstalling
- Added support for different cache backends
- Added support for a generic "sites/all" directory.